background problem on mobile devices fix

--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button, .social-list__link, .modal-policy__custom-checkbox {
+.button, .modal-policy__custom-checkbox {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -61,7 +61,7 @@
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list__link, .footer-contacts__link {
+.nav__link, .header-contacts__link, .footer-contacts__link {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -71,6 +71,10 @@
 
 .backdrop {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-list__link {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 a {
@@ -643,7 +647,7 @@ body {
 }
 
 .header {
-  border-bottom: 1px solid var(--border-header-color);
+  border-bottom: 1px solid #ececec;
 }
 
 @media screen and (max-width: 1199px) {
@@ -671,16 +675,15 @@ body {
   font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.02em;
-  color: var(--heading-text-color);
-  transition: color var(--time) var(--cubic);
+  color: #212121;
 }
 
 .nav__link:hover, .nav__link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .nav__link--current {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .nav__link--current::after {
@@ -691,7 +694,7 @@ body {
   width: 100%;
   height: 4px;
   content: '';
-  background-color: var(--accent-color);
+  background-color: #2196f3;
 }
 
 @media screen and (max-width: 767px) {
@@ -724,11 +727,10 @@ body {
   font-size: 12px;
   line-height: 1.167;
   letter-spacing: 0.02em;
-  transition: color var(--time) var(--cubic);
 }
 
 .header-contacts__link:hover, .header-contacts__link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 @media screen and (min-width: 1200px) {
@@ -740,7 +742,7 @@ body {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 767px) {
   .header-contacts__icon {
     margin-right: 8px;
   }
@@ -755,34 +757,40 @@ body {
 .hero {
   padding-top: 118px;
   padding-bottom: 118px;
-  background-image: linear-gradient(var(--background-gradient-color), var(--background-gradient-color)), url(../images/hero-background/background-mobile-1x.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-background/background-mobile-1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
 }
 
 @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(var(--background-gradient-color), var(--background-gradient-color)), url(../images/hero-background/background-mobile-2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-background/background-mobile-2x.jpg);
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .hero {
+    background-size: auto 100%;
   }
 }
 
 @media screen and (min-width: 480px) {
   .hero {
     background-size: 480px;
+    background-size: cover;
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: linear-gradient(var(--background-gradient-color), var(--background-gradient-color)), url(../images/hero-background/background-tablet-1x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-background/background-tablet-1x.jpg);
     background-size: 768px;
   }
 }
 
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(var(--background-gradient-color), var(--background-gradient-color)), url(../images/hero-background/background-tablet-2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-background/background-tablet-2x.jpg);
   }
 }
 
@@ -790,14 +798,14 @@ body {
   .hero {
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: linear-gradient(var(--background-gradient-color), var(--background-gradient-color)), url(../images/hero-background/background-desktop-1x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-background/background-desktop-1x.jpg);
     background-size: 1600px;
   }
 }
 
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(var(--background-gradient-color), var(--background-gradient-color)), url(../images/hero-background/background-desktop-2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-background/background-desktop-2x.jpg);
   }
 }
 
