--- a/sass/layout/_hero-section.scss
+++ b/sass/layout/_hero-section.scss
@@ -2,60 +2,45 @@
   padding-top: 118px;
   padding-bottom: 118px;
 
-  background-image: linear-gradient(
-      var(--background-gradient-color),
-      var(--background-gradient-color)
-    ),
+  background-image: linear-gradient($backgroundGradientColor, $backgroundGradientColor),
     url(../images/hero-background/background-mobile-1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: linear-gradient(
-        var(--background-gradient-color),
-        var(--background-gradient-color)
-      ),
+    background-image: linear-gradient($backgroundGradientColor, $backgroundGradientColor),
       url(../images/hero-background/background-mobile-2x.jpg);
   }
 
-  @media screen and (min-width: 480px) {
+  @include for-size(before-mobile) {
+    background-size: auto 100%;
+  }
+  @include for-size(mobile) {
     background-size: 480px;
+    background-size: cover;
   }
 
-  @media screen and (min-width: 768px) {
-    background-image: linear-gradient(
-        var(--background-gradient-color),
-        var(--background-gradient-color)
-      ),
+  @include for-size(tablet) {
+    background-image: linear-gradient($backgroundGradientColor, $backgroundGradientColor),
       url(../images/hero-background/background-tablet-1x.jpg);
     background-size: 768px;
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: linear-gradient(
-          var(--background-gradient-color),
-          var(--background-gradient-color)
-        ),
+      background-image: linear-gradient($backgroundGradientColor, $backgroundGradientColor),
         url(../images/hero-background/background-tablet-2x.jpg);
     }
   }
 
-  @media screen and (min-width: 1200px) {
+  @include for-size(desktop) {
     padding-top: 200px;
     padding-bottom: 200px;
 
-    background-image: linear-gradient(
-        var(--background-gradient-color),
-        var(--background-gradient-color)
-      ),
+    background-image: linear-gradient($backgroundGradientColor, $backgroundGradientColor),
       url(../images/hero-background/background-desktop-1x.jpg);
     background-size: 1600px;
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: linear-gradient(
-          var(--background-gradient-color),
-          var(--background-gradient-color)
-        ),
+      background-image: linear-gradient($backgroundGradientColor, $backgroundGradientColor),
         url(../images/hero-background/background-desktop-2x.jpg);
     }
   }
